<resources>
    <string name="app_name">HeartSkan</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Analytics</string>
    <string name="title_notifications">Profile</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="add_spo2">Add SpO2</string>
    <string name="bpm">bpm</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sort">SORT</string>
    <string name="filter">Filter</string>
    <string name="add_meal">Add Meal</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="evitalz_information_management_pvt_ltd">eVitalZ Information Management Pvt Ltd</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sleep">Sleep</string>
    <string name="PairingwiththeDevice">Pairing with the Device</string>
    <string name="PairingSuccessful">PairingSuccessful</string>
    <string name="Nodeviceshasregisteredyet">No devices has registered yet</string>
    <string name="spo2">SpO2</string>
    <string name="add_new_device">Add New Device</string>
    <string name="searching_devices">Searching Devices</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="pulseoximeter">PulseOximeter</string>
    <string name="powered_by">Powered by</string>
    <string name="devicenotfound">Device Not Found</string>
    <string name="please_wait">Please Wait</string>
    <string name="yes">Yes</string>
    <string name="reset">RESET</string>
    <string name="no">No</string>
    <string name="loading">Loading</string>
    <string name="ErrorwhenPairingwithdeviceTryAgain">Error when Pairing with device. Try Again</string>
    <string name="SearchingforDevices">Searching for Devices</string>
    <string name="Connect">Connect</string>
    <string name="aboutus">Designed for ease of use, Thermskan is a handy app created to provide you a diary to enter your body temperature. This App keeps the entered record of your temperature to have a healthy and better life.Ideal for usse at home, office or factory the temperature recorded using any thermometer can be fed into the app fields either in centigrade or Farenheit modes.The app auto converts C to F and viceversa.</string>
    <string name="SpO2_colon">SpO2 :&#160;</string>
    <string name="PR">PR :&#160;</string>
    <string name="Case_colon">Case :&#160;</string>
    <string name="SYS">SYS :&#160;</string>
    <string name="DIA">DIA :&#160;</string>
    <string name="Glucose">Glucose &#160;</string>
    <string name="Glucose_c">Glucose &#160;</string>
    <string name="Temp">Temp :&#160;</string>
    <string name="Case">case</string>
    <string name="SpO2">SpO2</string>
    <string name="Abnormal995F1009F">Abnormal : 99.5 °F - 100.9 °F</string>
    <string name="Alert95For101F">Alert : &lt;95 °F (or) &gt;101 °F </string>
    <string name="NormalPR60andPR100">Normal : PR &gt;= 60 and PR &lt;=100</string>
    <string name="AbnormalPR40andPR59orPR101andPR130">Abnormal : PR &gt;= 40 and PR &lt;= 59 (or) PR &gt;= 101 and PR &lt;= 130</string>
    <string name="NormalResult1134mgdl">Normal : Result &lt;= 113.4 mg/dl</string>
    <string name="AbnormalResult1134mgdlandResult180mgdl">Abnormal : Result &gt; 113.4 mg/dl and Result &lt;= 180 mg/dl</string>
    <string name="AlertResult70mgdlandResult180mgdl">Alert : Result &lt; 70 mg/dl and Result &gt; 180 mg/dl</string>
    <string name="NormalDIA60andDIA80">Normal : DIA &gt;=60 and DIA &lt;= 80</string>
    <string name="AbnormalDIA40andDIA59orDIA80andDIA90">Abnormal : DIA &gt;= 40 and DIA &lt;= 59 (or) DIA > 80 and DIA &lt;= 90</string>
    <string name="AlertDIA40orDIA90">Alert : DIA &lt; 40 (or) DIA &gt; 90</string>
    <string name="NormalResult42andResult54">Normal : Result &gt;= 42% and Result &lt;= 54%</string>
    <string name="AbnormalResult42andResult54">Abnormal : Result &lt; 42% and Result &gt; 54%</string>
    <string name="NormalResult38andResult46">Normal : Result &gt;= 38% and Result &lt;= 46%</string>
    <string name="AbnormalResult38andResult46">Abnormal : Result &lt; 38% and Result &gt; 46%</string>
    <string name="NormalResult14gdLandResult18gdL">Normal : Result &gt;= 14 g/dL and Result &lt;= 18 g/dL</string>
    <string name="AbnormalResult14gdLandResult18gdL">Abnormal : Result &lt; 14 g/dL and Result &gt; 18 g/dL</string>
    <string name="NormalResult12gdLandResult16gdL">Normal : Result &gt;= 12 g/dL and Result &lt;= 16 g/dL</string>
    <string name="AbnormalResult12gdLandResult16gdL">Abnormal : Result &lt; 12 g/dL and Result &gt; 16 g/dL</string>
    <string name="DateTimeisnotvalidThedatetimeissettocurrentdatetimeThiscanhappenwhenbatteryisreplacedorfirsttimeofconnectingtodevice">Date Time is not valid. The date &amp; time is set to current date &amp; time. This can happen when battery is replaced or first time of connecting to device</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Normal365C375C">Normal : 36.5 °C - 37.5 °C</string>
    <string name="Abnormal375C383C">Abnormal : 37.5 °C - 38.3 °C</string>
    <string name="Alert35Cor384C">Alert : 35 °C (or) > 38.4 °C</string>
    <string name="NormalSpo295andSpo2100">Normal : Spo2 >= 95 and Spo2 &lt; = 100</string>
    <string name="AbnormalSpo290andSpo294">Abnormal : Spo2 >= 90 and Spo2 &lt; = 94</string>
    <string name="AlertSpo290">Alert : Spo2 &lt; 90</string>
    <string name="NormalResult63mmol">Normal : Result &lt;= 6.3 mmol</string>
    <string name="AbnormalResultmmolandResult10mmol">Abnormal : Result &gt; 6.3 mmol and Result &lt;= 10.0 mmol</string>
    <string name="AlertResult39mmolandResult10mmol">Alert : Result &lt; 3.9 mmol and Result &gt; 10 mmol</string>
    <string name="NormalSYS80andSYS120">Normal : SYS &gt;= 80 and SYS &lt;=120</string>
    <string name="AbnormalSYS60andSYS80orSYS120andSYS140">Abnormal : SYS &gt;= 60 and SYS &lt; 80 (or) SYS > 120 and SYS &lt; 140 </string>
    <string name="AlertSYS60orSYS140">Alert : SYS &lt; 60 (or) SYS &gt; 140</string>
    <string name="NormalPR60orPR100">Normal : PR &gt; 60 (or) PR &lt; 100</string>
    <string name="AbnormalPR39andPR60orPR100andPR130">Abnormal : PR &gt; 39 and PR &lt; 60 (or) PR &gt; 100 and PR &lt;= 130</string>
    <string name="AlertVALUE3_0">Alert : VALUE &gt; 3.0</string>
    <string name="NormalVALUE200">Normal : VALUE &lt; 200</string>
    <string name="AbnormalVALUE200orVALUE240">Abnormal : VALUE &gt; 200 (or) VALUE &lt; 240</string>
    <string name="AlertVALUE240">Alert : VALUE &gt; 240</string>
    <string name="NormalVALUE6">Normal : VALUE &lt; 6</string>
    <string name="AbnormalVALUE6orVALUE7">Abnormal : VALUE &gt;= 6 (or) VALUE &lt;= 7</string>
    <string name="AlertVALUE7">Alert : VALUE &gt; 7</string>
    <string name="Normal977F995F">Normal : 97.7 °F - 99.5 °F</string>
    <string name="AlertPR40orPR130">Alert : PR &lt; 40 (or) PR &gt; 130</string>
    <string name="NormalVALUE00orVALUE15">Normal : VALUE &gt;= 0.0 (or) VALUE &lt; 1.5</string>
    <string name="AbnormalVALUE15orVALUE30">Abnormal : VALUE &gt;= 1.5 (or) VALUE &lt; 3.0</string>
    <string name="Weight">Weight</string>
    <string name="FastingBloodSugar">Fasting Blood Sugar</string>
    <string name="RandomGlucoseTest">Random Glucose Test</string>
    <string name="PostprandialGlucoseTest">Postprandial Glucose Test</string>
    <string name="Pleaseselectthetesttype">Please select the test type..</string>
    <string name="Confirmationtodiscardthedata">Confirmation to discard the data?</string>
    <string name="ConnectingtoMyGlucoHealth">Connecting to MyGlucoHealth</string>
    <string name="SelectTestType">Select Test Type</string>
    <string name="Connected">Connected</string>
    <string name="Disconnected">Disconnected</string>
    <string name="Oximeter">Oximeter</string>
    <string name="BMI">BMI</string>
    <string name="RapidTest">Extra Test</string>
    <string name="Ketone">Ketone</string>
    <string name="Cholesterol">Cholesterol</string>
    <string name="UricAcid">Uric Acid</string>
    <string name="Hemoglobin">Hemoglobin</string>
    <string name="Lactate">Lactate</string>
    <string name="Breathalyzer">Breathalyzer</string>
    <string name="PatientSymptoms">Patient Symptoms</string>
    <string name="BloodPressure">Blood Pressure</string>
    <string name="BloodGlucose">Blood Glucose</string>
    <string name="Temperature">Temperature</string>
    <string name="ECG">ECG</string>
    <string name="Biovotion">Biovotion</string>
    <string name="Comment">Comment</string>
    <string name="DataConfirmationtoStore">Data Confirmation to Store</string>
    <string name="Value2">Value2</string>
    <string name="Discard">Discard</string>
    <string name="Value3">Value3</string>
    <string name="Value4">Value4</string>
    <string name="No">NO</string>
    <string name="Yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="DeviceName">Device Name</string>
    <string name="DateTime">DateTime</string>
    <string name="Value1">Value1</string>
    <string name="Ok">Ok</string>
    <string name="ChoosetheMethodofPlacement">Select Device Placement</string>
    <string name="LEFTHAND">LEFT HAND</string>
    <string name="LEFTWRIST">LEFT WRIST</string>
    <string name="LEFTLEG">LEFT LEG</string>
    <string name="CHEST">CHEST</string>
    <string name="Information">Information</string>
    <string name="Close">Close</string>
    <string name="Checkingdatafromdevice">Checking data from device....</string>
    <string name="NoDataFound">No Data Found</string>
    <string name="TypeMismatch">Type Mismatch</string>
    <string name="SettingDeviceDate">Setting Device Date</string>
    <string name="ClearingDeviceData">Clearing Device Data</string>
    <string name="DataReceived">Data Received</string>
    <string name="NodataAvailable">No data Available</string>
    <string name="HCT">HCT</string>
    <string name="DevicenotFound">Device not Found...</string>
    <string name="HB">HB</string>
    <string name="Connectingtodevice">Connecting to device</string>
    <string name="Thelastreadingismismatchedwithwhatyouchoosedtype">The last reading is mismatched with what you choosed type:</string>
    <string name="Clickheretostartblowingprocess">Click her to start blowing process</string>
    <string name="AddManually">Add Manually</string>
    <string name="Loading">Loading</string>
    <string name="Store">Store</string>
    <string name="Note1">Note:\nIf you have issue on connectiviy or data receiving do the following steps:\ni. Switch off and on the bluetooth.\nii. Close the app and reopen.\niii. Try to connect the device for every 30 seconds.</string>
    <string name="menu_help">Help</string>
    <string name="menu_order">Place Order</string>
    <string name="menu_support">Support</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="confirm_data_to_store">Confirm Data to Store</string>
    <string name="save">SAVE</string>
    <string name="device_placement">Device Placement</string>
    <string name="note_please_take_data_before_clicking_connect_button_for_proper_connectivity">Note : Please take data before clicking CONNECT button for proper connectivity</string>
    <string name="heartrate">HeartRate</string>
</resources>