<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handler"
            type="com.evitalz.homevitalz.cardfit.DialogDevicePlacementHandler" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvheading"
            android:padding="5dp"
            android:background="@color/purple_700"
            android:visibility="visible"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/ChoosetheMethodofPlacement"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_height="wrap_content" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvheading"
            android:id="@+id/conselecttype">

            <ImageView
                android:id="@+id/ivlefthand"
                android:padding="3dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:onClick="@{handler::onLeftHandClicked}"
                app:layout_constraintRight_toLeftOf="@+id/ivleftwrist"
                android:background="@color/gray"
                android:src="@drawable/left_hand"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/tvlefthand"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/LEFTHAND"
                app:layout_constraintTop_toBottomOf="@+id/ivlefthand"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvleftwrist"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ivleftwrist"
                android:padding="3dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivlefthand"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="@{handler::onLeftWristClicked}"
                android:background="@color/gray"
                android:src="@drawable/left_wrist"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/tvleftwrist"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:text="@string/LEFTWRIST"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/ivleftwrist"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tvlefthand"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/ivleftleg"
                android:padding="3dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvlefthand"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ivchest"
                android:background="@color/gray"
                android:onClick="@{handler::onLeftLegClicked}"
                android:src="@drawable/left_leg"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/tvleftleg"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:text="@string/LEFTLEG"
                app:layout_constraintTop_toBottomOf="@+id/ivleftleg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tvchest"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_height="wrap_content" />


            <ImageView
                android:id="@+id/ivchest"
                android:padding="3dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvlefthand"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/ivleftleg"
                android:background="@color/gray"
                android:onClick="@{handler::onChestClicked}"
                android:src="@drawable/chest"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/tvchest"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:padding="10dp"
                android:text="@string/CHEST"
                app:layout_constraintTop_toBottomOf="@+id/ivchest"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/tvleftleg"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_height="wrap_content" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Connect"
            android:id="@+id/btntaketest"
            android:onClick="@{handler::onTakeTestClicked}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conselecttype"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/btncancel"
            android:onClick="@{handler::onTestCancelClicked}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/btntaketest"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/cancel"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/note_please_take_data_before_clicking_connect_button_for_proper_connectivity"
            app:layout_constraintTop_toBottomOf="@+id/btncancel"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>