<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="handler"
            type="com.evitalz.homevitalz.cardfit.DialogHandler" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:background="#E5E1E1"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:visibility="gone"
        android:padding="5dp"
        android:elevation="5dp"
        android:id="@+id/datastorelayout"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_data_to_store"
            android:textAlignment="center"
            android:padding="5dp"
            android:id="@+id/tvhead"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@android:style/TextAppearance.Large" />


        <LinearLayout
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tvhead"
            android:orientation="horizontal"
            android:id="@+id/lindevicetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/DeviceName"
                android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/tvdevicetype"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="HeartSkan"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/lindevicetype"
            android:orientation="horizontal"
            android:id="@+id/lindatetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/DateTime"
                android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/tvdatetime"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/DeviceName"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/lindatetime"
            android:orientation="horizontal"
            android:id="@+id/lincase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/Case"
                android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/tvcase"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/DeviceName"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/lincase"
            android:orientation="horizontal"
            android:id="@+id/linheartrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/heartrate"
                android:layout_height="wrap_content" />

            <TextView

                android:id="@+id/tvhrv"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/DeviceName"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/linheartrate"
            android:orientation="horizontal"
            android:id="@+id/lindevplacement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/device_placement"
                android:layout_height="wrap_content" />
            <TextView

                android:id="@+id/tvplacementtype"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/DeviceName"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnsave"
            android:layout_margin="10dp"
            android:onClick="@{handler::onDataSaveClicked}"
            app:layout_constraintTop_toBottomOf="@+id/lindevplacement"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    </ScrollView>
</layout>