<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/dev_img"
            android:layout_weight="0.3"
            android:layout_width="match_parent"
            android:src="@drawable/ic_baseline_delete_24"
            android:layout_height="0dp" />

        <TextView
            android:visibility="gone"
            android:id="@+id/dev_name"
            android:padding="5dp"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/status"
                android:textAlignment="center"
                android:padding="5dp"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <Button
            android:visibility="gone"
            android:id="@+id/blow"
            android:text="@string/Clickheretostartblowingprocess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            android:layout_height="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_v1"
                    android:padding="5dp"
                    android:textAlignment="textEnd"
                    android:text="@string/SYS"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_v2"
                    android:padding="5dp"
                    android:textAlignment="textEnd"
                    android:text="@string/DIA"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txt_v3"
                    android:padding="5dp"
                    android:textAlignment="textEnd"
                    android:text="@string/PR"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:padding="5dp"
                    android:id="@+id/sys"
                    android:text=""
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:padding="5dp"
                    android:id="@+id/dia"
                    android:text=""
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:padding="5dp"
                    android:id="@+id/pr"
                    android:text=""
                    android:textStyle="bold"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_margin="5dp"
            android:textColor="#FFF"
            android:background="#00B862"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/store"
            android:text="@string/Connect" />

        <Button
            android:layout_margin="5dp"
            android:background="@color/colorSpinnerBackground"
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_manual"
            android:text="@string/AddManually" />

        <TextView
            android:id="@+id/note"
            android:background="#dcbb18"
            android:textColor="#FFF"
            android:padding="5dp"
            android:text="note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</layout>